--- a/deno.json
+++ b/deno.json
@@ -17,6 +17,7 @@
     "noImplicitReturns": true
   },
   "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.8",
     "@std/expect": "jsr:@std/expect@^1.0.8",
     "@std/testing": "jsr:@std/testing@^1.0.5"
   }
