Day five part one complete

--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,8 @@
     "test:one": "deno test --allow-read ./dayOne/",
     "test:two": "deno test --allow-read ./dayTwo/",
     "test:three": "deno test --allow-read ./dayThree/",
-    "test:four": "deno test --allow-read ./dayFour/"
+    "test:four": "deno test --allow-read ./dayFour/",
+    "test:five": "deno test --allow-read ./dayFive/"
   },
   "lint": {
     "rules": {
