--- a/deno.json
+++ b/deno.json
@@ -11,10 +11,15 @@
     }
   },
   "compilerOptions": {
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "lib": [
+      "deno.window",
+      "DOM"
+    ]
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.8",
+    "@std/data-structures": "jsr:@std/data-structures@^1.0.4",
     "@std/expect": "jsr:@std/expect@^1.0.8",
     "@std/streams": "jsr:@std/streams@^1.0.8",
     "@std/testing": "jsr:@std/testing@^1.0.5"
